fix: the undergoing arrows on mobile mode

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -65,7 +65,7 @@
     margin-top: 2em;
     background-color: rgb(0, 0, 0, 0.53);
     width: 90%;
-    height: 70%;
+    height: 90%;
     display: flex;
     flex-direction: column;
   }
